// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DashboardHeader /> > should render dashboard header for Code Standard Violations 1`] = `
<div class="
  v-application
  v-layout
  v-layout--full-height
  v-locale--is-ltr
  v-theme--light
">
  <div class="v-application__wrap">
    <header
      class="
        border-b
        elevation-0
        v-app-bar
        v-locale--is-ltr
        v-theme--light
        v-toolbar
        v-toolbar--collapse-start
        v-toolbar--density-default
      "
      style="
        top: 0px;
        z-index: 1004;
        transform: translateY(0px);
        position: fixed;
        transition: none !important;
        left: 0px;
        width: calc(100% - 0px);
      "
    >
      <!---->
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <!---->
        <!---->
        <!-- v-if -->
        <div class="
          brand-row
          pl-4
          v-app-bar-title
          v-toolbar-title
        ">
          <div class="v-toolbar-title__placeholder">
            <!---->
            <div
              aria-label="GitactionBoard"
              class="
                brand-mark
                v-img
                v-img--booting
                v-responsive
              "
              role="img"
              style="
                height: 28px;
                width: 38px;
              "
            >
              <div class="v-responsive__sizer"></div>
              <transition-stub
                appear="true"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <img
                  alt="GitactionBoard"
                  class="
                    v-img__img
                    v-img__img--contain
                  "
                  src="/favicon.ico"
                  style="display: none;"
                />
              </transition-stub>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <!---->
              </transition-stub>
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
            <span class="brand-name">
              GitactionBoard
            </span>
            <span class="
              font-mono
              version
            ">
              v3.1.0
            </span>
          </div>
        </div>
        <div class="v-spacer"></div>
        <div
          class="
            page-title
            pr-4
            v-app-bar-title
            v-toolbar-title
          "
          id="sub-header"
        >
          <div class="v-toolbar-title__placeholder">
            <!---->
            Code Standard Violations
          </div>
        </div>
        <!---->
      </div>
      <transition-stub
        appear="false"
        css="true"
        name="expand-transition"
        persisted="false"
      >
        <!---->
      </transition-stub>
    </header>
  </div>
</div>
`;

exports[`<DashboardHeader /> > should render dashboard header for Exposed Secrets 1`] = `
<div class="
  v-application
  v-layout
  v-layout--full-height
  v-locale--is-ltr
  v-theme--light
">
  <div class="v-application__wrap">
    <header
      class="
        border-b
        elevation-0
        v-app-bar
        v-locale--is-ltr
        v-theme--light
        v-toolbar
        v-toolbar--collapse-start
        v-toolbar--density-default
      "
      style="
        top: 0px;
        z-index: 1004;
        transform: translateY(0px);
        position: fixed;
        transition: none !important;
        left: 0px;
        width: calc(100% - 0px);
      "
    >
      <!---->
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <!---->
        <!---->
        <!-- v-if -->
        <div class="
          brand-row
          pl-4
          v-app-bar-title
          v-toolbar-title
        ">
          <div class="v-toolbar-title__placeholder">
            <!---->
            <div
              aria-label="GitactionBoard"
              class="
                brand-mark
                v-img
                v-img--booting
                v-responsive
              "
              role="img"
              style="
                height: 28px;
                width: 38px;
              "
            >
              <div class="v-responsive__sizer"></div>
              <transition-stub
                appear="true"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <img
                  alt="GitactionBoard"
                  class="
                    v-img__img
                    v-img__img--contain
                  "
                  src="/favicon.ico"
                  style="display: none;"
                />
              </transition-stub>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <!---->
              </transition-stub>
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
            <span class="brand-name">
              GitactionBoard
            </span>
            <span class="
              font-mono
              version
            ">
              v3.1.0
            </span>
          </div>
        </div>
        <div class="v-spacer"></div>
        <div
          class="
            page-title
            pr-4
            v-app-bar-title
            v-toolbar-title
          "
          id="sub-header"
        >
          <div class="v-toolbar-title__placeholder">
            <!---->
            Exposed Secrets
          </div>
        </div>
        <!---->
      </div>
      <transition-stub
        appear="false"
        css="true"
        name="expand-transition"
        persisted="false"
      >
        <!---->
      </transition-stub>
    </header>
  </div>
</div>
`;

exports[`<DashboardHeader /> > should render dashboard header for Workflow Jobs 1`] = `
<div class="
  v-application
  v-layout
  v-layout--full-height
  v-locale--is-ltr
  v-theme--light
">
  <div class="v-application__wrap">
    <header
      class="
        border-b
        elevation-0
        v-app-bar
        v-locale--is-ltr
        v-theme--light
        v-toolbar
        v-toolbar--collapse-start
        v-toolbar--density-default
      "
      style="
        top: 0px;
        z-index: 1004;
        transform: translateY(0px);
        position: fixed;
        transition: none !important;
        left: 0px;
        width: calc(100% - 0px);
      "
    >
      <!---->
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <!---->
        <!---->
        <!-- v-if -->
        <div class="
          brand-row
          pl-4
          v-app-bar-title
          v-toolbar-title
        ">
          <div class="v-toolbar-title__placeholder">
            <!---->
            <div
              aria-label="GitactionBoard"
              class="
                brand-mark
                v-img
                v-img--booting
                v-responsive
              "
              role="img"
              style="
                height: 28px;
                width: 38px;
              "
            >
              <div class="v-responsive__sizer"></div>
              <transition-stub
                appear="true"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <img
                  alt="GitactionBoard"
                  class="
                    v-img__img
                    v-img__img--contain
                  "
                  src="/favicon.ico"
                  style="display: none;"
                />
              </transition-stub>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <!---->
              </transition-stub>
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
            <span class="brand-name">
              GitactionBoard
            </span>
            <span class="
              font-mono
              version
            ">
              v3.1.0
            </span>
          </div>
        </div>
        <div class="v-spacer"></div>
        <div
          class="
            page-title
            pr-4
            v-app-bar-title
            v-toolbar-title
          "
          id="sub-header"
        >
          <div class="v-toolbar-title__placeholder">
            <!---->
            Workflow Jobs
          </div>
        </div>
        <!---->
      </div>
      <transition-stub
        appear="false"
        css="true"
        name="expand-transition"
        persisted="false"
      >
        <!---->
      </transition-stub>
    </header>
  </div>
</div>
`;
